@@ -2,7 +2,7 @@
 # Kernel/Config/Defaults.pm - Default Config file for OTRS kernel
 # Copyright (C) 2001-2010 OTRS AG, http://otrs.org/
 # --
-# $Id: Defaults.pm,v 1.361 2010-08-06 16:16:15 martin Exp $
+# $Id: Defaults.pm,v 1.362 2010-08-10 10:30:22 mb Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -25,7 +25,7 @@ use strict;
 use warnings;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.361 $) [1];
+$VERSION = qw($Revision: 1.362 $) [1];
 
 # use ../ as lib location
 use File::Basename;
@@ -220,7 +220,7 @@ sub LoadDefaults {
 
     # Frontend::ImagePath
     # (URL image path of icons for navigation.)
-    $Self->{'Frontend::ImagePath'} = '<OTRS_CONFIG_Frontend::WebPath>images/Standard/';
+    $Self->{'Frontend::ImagePath'} = '<OTRS_CONFIG_Frontend::WebPath>skins/Agent/default/img/';
 
     # DefaultViewNewLine
     # (insert new line in text messages after max x chars and
@@ -2218,6 +2218,6 @@ did not receive this file, see L<http://www.gnu.org/licenses/agpl.txt>.
 
 =head1 VERSION
 
-$Revision: 1.361 $ $Date: 2010-08-06 16:16:15 $
+$Revision: 1.362 $ $Date: 2010-08-10 10:30:22 $
 
 =cut
